--- a/src/pages/ai-automation.astro
+++ b/src/pages/ai-automation.astro
@@ -28,7 +28,10 @@ import TemporaryImage from '@/assets/tmp.avif';
 		class=""
 		hasHeroImage={false}
 	>
-		<ButtonGroup slot="after-description" />
+		<ButtonGroup
+			slot="after-description"
+			learnMoreHref="#valueProp"
+		/>
 		<!-- <div
 			slot="after-content"
 			class="w-full h-fit overflow-hidden mt-10"
@@ -43,6 +46,7 @@ import TemporaryImage from '@/assets/tmp.avif';
 		title="Get More Done Without Doing More"
 		subtitle="Your Time Should Go Where It Counts"
 		body="The businesses that grow are the ones that follow up fast, stay organized, and deliver a consistent experience every time. That's exactly what automation gives you — without changing how you work. <br><br>We set up simple, powerful systems that handle your follow-ups, messages, and client reminders in the background, so you can stay focused on doing great work while the rest handles itself."
+		sectionId={'valueProp'}
 	/>
 	<Benefits
 		subtitle="Smart Tools for Busy People"
