--- a/src/pages/digital-marketing.astro
+++ b/src/pages/digital-marketing.astro
@@ -28,7 +28,10 @@ import TemporaryImage from '@/assets/tmp.avif';
 		class=""
 		hasHeroImage={false}
 	>
-		<ButtonGroup slot="after-description" />
+		<ButtonGroup
+			slot="after-description"
+			learnMoreHref="#valueProp"
+		/>
 		<!-- <div
 			slot="after-content"
 			class="w-full h-fit overflow-hidden mt-10"
@@ -43,6 +46,7 @@ import TemporaryImage from '@/assets/tmp.avif';
 		title="Get in Front of the Right People at the Right Time"
 		subtitle="Visibility Alone Isn't Enough"
 		body="Getting found is just the start. We help you turn those clicks into real work — with strategies built to attract the right customers, earn their trust, and convert them into booked jobs.<br><br>From high-converting landing pages to automated review requests, we make every part of your online presence work harder for you — so your calendar stays full, and your marketing finally pays off."
+		sectionId={'valueProp'}
 	/>
 	<Benefits
 		subtitle="More Traffic Only Matters if It Converts"
