--- a/src/pages/web-development.astro
+++ b/src/pages/web-development.astro
@@ -28,7 +28,10 @@ import TemporaryImage from '@/assets/tmp.avif';
 		class=""
 		hasHeroImage={false}
 	>
-		<ButtonGroup slot="after-description" />
+		<ButtonGroup
+			slot="after-description"
+			learnMoreHref={'#valueProp'}
+		/>
 		<!-- <div
 			slot="after-content"
 			class="w-full h-fit overflow-hidden mt-10"
@@ -43,6 +46,7 @@ import TemporaryImage from '@/assets/tmp.avif';
 		title="Turn Great Work Into a Steady Stream of New Clients"
 		subtitle="Your Best Jobs Should Bring You Your Next Jobs"
 		body="Every project you finish is a chance to earn the next one. A well-built website shows off your craftsmanship, builds trust with new clients, and proves you take your business seriously. <br><br>We design and build sites that showcase your skills, build credibility, and make it easy for potential clients to say yes."
+		sectionId="valueProp"
 	/>
 	<Benefits
 		subtitle="First Impressions Matter"
