--- a/src/pages/who-we-help.astro
+++ b/src/pages/who-we-help.astro
@@ -29,7 +29,10 @@ import TemporaryImage from '@/assets/tmp.avif';
 		class=""
 		hasHeroImage={false}
 	>
-		<ButtonGroup slot="after-description" />
+		<ButtonGroup
+			slot="after-description"
+			learnMoreHref="#valueProp"
+		/>
 		<!-- <div
 			slot="after-content"
 			class="w-full h-fit overflow-hidden mt-10"
@@ -44,6 +47,7 @@ import TemporaryImage from '@/assets/tmp.avif';
 		title="We Help You Win More of the Right Jobs"
 		subtitle="Why Trades Pros Trust Us"
 		body="From custom home remodelers to full-service contractors, we work with tradesmen who are serious about growing. Whether you want more high-ticket projects or fewer tire-kickers, we help you attract the right clients — and keep your calendar full of work worth doing.<br><br>We help tradesmen like you stand out, look professional online, and bring in better projects — the kind that pay what you're worth."
+		sectionId={'valueProp'}
 	/>
 	<WhyWorksiteLeads />
 	<ExtraServices />
