--- a/src/components/sections/home/CoreServices.astro
+++ b/src/components/sections/home/CoreServices.astro
@@ -54,11 +54,13 @@ interface Props {
 	title?: string;
 	subtitle?: string;
 	className?: string;
+	sectionId?: string;
 }
 
 const {
 	title = 'All-in-One Digital Packages',
 	subtitle = 'More than just websites, we offer all-in-one packages designed to help you manage and grow your business.',
+	sectionId,
 } = Astro.props as Props;
 ---
 
@@ -66,6 +68,7 @@ const {
 	title={title}
 	subtitle={subtitle}
 	centerHeader={true}
+	sectionId={sectionId}
 >
 	<div
 		class="grid grid-cols-1 gap-8 lg:gap-12"
