--- a/src/components/sections/shared/SectionContainer.astro
+++ b/src/components/sections/shared/SectionContainer.astro
@@ -8,6 +8,7 @@ interface Props {
 	headerColor?: string;
 	textColor?: string;
 	centerHeader?: boolean;
+	sectionId?: string;
 }
 
 const {
@@ -18,6 +19,7 @@ const {
 	textColor = 'text-gray-600',
 	headerColor = 'text-gray-600',
 	centerHeader = false,
+	sectionId,
 } = Astro.props as Props;
 
 const headerAlignment =
@@ -27,6 +29,7 @@ const headerAlignment =
 <section
 	class={`${backgroundColor}`}
 	data-reveal-group
+	id={sectionId}
 >
 	<div class="content-container flex flex-col gap-10 lg:gap-10">
 		<!-- Section Header -->
