--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,18 +17,14 @@ type Contact = {
 
 const contactInfo: Contact[] = [
 	{
-		name: 'number',
-		value: '+1 (123) - 1234',
-		href: 'tel:+11231234',
-	},
-	{
 		name: 'email',
 		value: 'contact@worksiteleads.com',
-		href: 'mailto:contact@domain.com',
+		href: 'mailto:contact@worksiteleads.com',
 	},
 	{
-		name: 'hours',
-		value: '24/7',
+		name: 'number',
+		value: '+1 (316) 330 - 4092',
+		href: 'tel:+1(316)3304092',
 	},
 ];
 ---
