--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -16,7 +16,7 @@ const footerLinks = [
 	},
 	{
 		name: 'Schedule a Call',
-		href: '/schedule-a-call',
+		href: '/schedule-call',
 	},
 ];
 
@@ -37,16 +37,14 @@ const serviceLinks = [
 
 const companyInfo = [
 	{
-		name: 'hours',
-		value: '24/7',
+		name: 'email',
+		value: 'contact@worksiteleads.com',
+		href: 'mailto:contact@worksiteleads.com',
 	},
 	{
 		name: 'number',
-		value: '+1 (123) 123-1234',
-	},
-	{
-		name: 'email',
-		value: 'contact@worksiteleads.com',
+		value: '+1 (316) 330 - 4092',
+		href: 'tel:+1(316)3304092',
 	},
 ];
 
@@ -135,8 +133,13 @@ const { footerText } = Astro.props as Props;
 						<ul class="flex flex-col gap-1">
 							{
 								companyInfo.map((info) => (
-									<li class="text-gray-300 wsl-text-sm font-semibold whitespace-nowrap">
-										{info.value}
+									<li>
+										<a
+											href={info.href}
+											class="text-gray-300 hover:text-primary-400 transition-colors wsl-text-sm font-semibold whitespace-nowrap"
+										>
+											{info.value}
+										</a>
 									</li>
 								))
 							}
