--- a/src/components/ui/buttons/Button.astro
+++ b/src/components/ui/buttons/Button.astro
@@ -1,7 +1,8 @@
 ---
 interface Props {
+	id?: string;
 	text: string;
-	href: string;
+	href?: string | undefined;
 	type?: 'button' | 'link';
 	variation?: 'primary' | 'secondary';
 	linkColor?: string;
@@ -9,6 +10,7 @@ interface Props {
 }
 
 const {
+	id,
 	text = 'Click',
 	href = '#',
 	type = 'button',
@@ -40,6 +42,7 @@ const colorClass = type === 'button' && buttonClasses[variation];
 		/>
 	) : (
 		<a
+			id={id}
 			href={href}
 			class:list={[
 				'transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-transparent',
