--- a/src/components/ui/media/VideoEmbed.astro
+++ b/src/components/ui/media/VideoEmbed.astro
@@ -16,7 +16,7 @@ const {
 	posterSrc,
 	title = 'Worksite Leads Company Overview Video',
 	autoplay = false,
-	loop = false,
+	loop = true,
 	controls = false,
 	preload = 'metadata',
 } = Astro.props;
