--- a/src/components/sections/shared/Testimonials.astro
+++ b/src/components/sections/shared/Testimonials.astro
@@ -68,7 +68,7 @@ const {
 					<TestimonialCard
 						client={testimonial.client}
 						review={testimonial.review}
-						class="w-full"
+						class="w-full h-full"
 					/>
 				</ScrollReveal>
 			))
