--- a/src/components/ui/cards/TestimonialCard.astro
+++ b/src/components/ui/cards/TestimonialCard.astro
@@ -9,11 +9,13 @@ interface Props {
 const { client, review, class: className } = Astro.props as Props;
 ---
 
-<article class={`flex flex-col bg-gray-200 rounded-lg gap-3 p-5 ${className}`}>
+<article
+	class={`flex flex-col bg-gray-200 rounded-lg gap-3 p-5 h-full ${className}`}
+>
 	<QuotationIcon class="text-gray-300" />
-	<div class="flex flex-col gap-8">
+	<div class="flex flex-col gap-8 flex-grow">
 		<blockquote
-			class="relative text-xs sm:text-sm md:text-base"
+			class="relative text-xs sm:text-sm md:text-base flex-grow"
 			set:html={review}
 		/>
 		<div>
