add contact form transitions and height

--- a/src/components/sections/shared/SubPageHero.astro
+++ b/src/components/sections/shared/SubPageHero.astro
@@ -122,11 +122,12 @@ const contentStyle = hasHeroImage
 				</ScrollReveal>
 			</div>
 		</div>
-
-		<div
-			class={`pb-10 lg:pb-20 w-full md:min-h-[450px] ${contactPageStyle} ${formStyle}`}
-		>
-			<slot name="after-content" />
-		</div>
+		<ScrollReveal stagger={true}>
+			<div
+				class={`pb-10 lg:pb-20 w-full md:min-h-[450px] ${contactPageStyle} ${formStyle}`}
+			>
+				<slot name="after-content" />
+			</div>
+		</ScrollReveal>
 	</div>
 </section>
