--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,5 +61,6 @@ const {
 		<Footer
 			footerText="Committed to providing businesses with innovative solutions that attract more clients, serve them better & keep them longer."
 		/>
+		<slot name="scripts" />
 	</body>
 </html>
