--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,6 +7,7 @@ import Testimonials from '@/components/sections/shared/Testimonials.astro';
 import Portfolio from '@/components/sections/shared/Portfolio.astro';
 import CTA from '@/components/sections/shared/CTA.astro';
 // Components
+import ContactUsFormEmbed from '@/components/ui/forms/ContactUsFormEmbed.astro';
 import ListItem from '@/components/ui/ListItem.astro';
 
 type Contact = {
@@ -61,33 +62,11 @@ const contactInfo: Contact[] = [
 				)
 			}
 		</div>
-		<div
-			slot="after-content"
-			class="w-full h-fit overflow-hidden px-2"
-		>
-			<iframe
-				src="https://api.leadconnectorhq.com/widget/form/DPgVyelrIJzLsRjld3cF"
-				style="width:100%;height:100%;border:none;border-radius:16px"
-				id="inline-DPgVyelrIJzLsRjld3cF"
-				data-layout="{'id':'INLINE'}"
-				data-trigger-type="alwaysShow"
-				data-trigger-value=""
-				data-activation-type="alwaysActivated"
-				data-activation-value=""
-				data-deactivation-type="neverDeactivate"
-				data-deactivation-value=""
-				data-form-name="Website Contact Us Form"
-				data-height="544"
-				data-layout-iframe-id="inline-DPgVyelrIJzLsRjld3cF"
-				data-form-id="DPgVyelrIJzLsRjld3cF"
-				title="Website Contact Us Form"
-			>
-			</iframe>
-		</div>
+		<Fragment slot="after-content">
+			<ContactUsFormEmbed client:load />
+		</Fragment>
 	</SubPageHero>
-	<Testimonials backgroundColor="bg-gray-50" />
-	<Portfolio />
-	<CTA />
 </Layout>
-
-<script src="https://link.msgsndr.com/js/form_embed.js"></script>
+<Testimonials backgroundColor="bg-gray-50" />
+<Portfolio />
+<CTA />
