--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -3,6 +3,7 @@
 import Layout from '@/layouts/Layout.astro';
 // Sections
 import SubPageHero from '@/components/sections/shared/SubPageHero.astro';
+import ScheduleFormEmbed from '@/components/ui/forms/ScheduleFormEmbed.astro';
 import Testimonials from '@/components/sections/shared/Testimonials.astro';
 import Portfolio from '@/components/sections/shared/Portfolio.astro';
 import CTA from '@/components/sections/shared/CTA.astro';
@@ -24,32 +25,10 @@ import CTA from '@/components/sections/shared/CTA.astro';
 			slot="after-content"
 			class="w-full h-fit overflow-hidden"
 		>
-			<iframe
-				src="https://api.leadconnectorhq.com/widget/form/oRpwRtJKwrjYlDzyxKA3"
-				style="width:100%;height:100%;border:none;border-radius:16px;overflow-y: scroll;"
-				id="inline-oRpwRtJKwrjYlDzyxKA3"
-				data-layout="{'id':'INLINE'}"
-				data-trigger-type="alwaysShow"
-				data-trigger-value=""
-				data-activation-type="alwaysActivated"
-				data-activation-value=""
-				data-deactivation-type="neverDeactivate"
-				data-deactivation-value=""
-				data-form-name="Website Demo Call Calendar form"
-				data-height="624"
-				data-layout-iframe-id="inline-oRpwRtJKwrjYlDzyxKA3"
-				data-form-id="oRpwRtJKwrjYlDzyxKA3"
-				title="Website Demo Call Calendar form"
-			>
-			</iframe>
+			<ScheduleFormEmbed client:load />
 		</div>
 	</SubPageHero>
 	<Testimonials backgroundColor="bg-gray-50" />
 	<Portfolio />
 	<CTA />
 </Layout>
-
-<script
-	src="https://link.msgsndr.com/js/form_embed.js"
-	type="text/javascript"
-></script>
