add transitions to contact and schedule call forms

--- a/src/components/ui/forms/ScheduleFormEmbed.astro
+++ b/src/components/ui/forms/ScheduleFormEmbed.astro
@@ -5,8 +5,9 @@ const src =
 
 <iframe
 	src={src}
-	style="width: 100%;border:none;overflow: hidden;height:782px;"
+	style="width:100%;border:none;overflow:hidden;height:782px;"
 	id="2YLsJZYrXQYyjn9CfuDB_1752908434599"
+	loading="eager"
 ></iframe>
 
 <script
