--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -63,7 +63,7 @@ const contactInfo: Contact[] = [
 			}
 		</div>
 		<Fragment slot="after-content">
-			<ContactUsFormEmbed client:load />
+			<ContactUsFormEmbed />
 		</Fragment>
 	</SubPageHero>
 </Layout>
