--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -25,7 +25,7 @@ import CTA from '@/components/sections/shared/CTA.astro';
 			slot="after-content"
 			class="w-full h-fit overflow-hidden"
 		>
-			<ScheduleFormEmbed client:load />
+			<ScheduleFormEmbed />
 		</div>
 	</SubPageHero>
 	<Testimonials backgroundColor="bg-gray-50" />
