--- a/src/components/sections/shared/ScrollReveal.astro
+++ b/src/components/sections/shared/ScrollReveal.astro
@@ -20,7 +20,7 @@ const {
 	class: className = '',
 } = Astro.props;
 
-const baseClasses = 'transition-all ease-out';
+const baseClasses = 'transition-all ease-out w-full';
 const hiddenClasses = {
 	fade: 'opacity-0',
 	slideUp: 'opacity-0 translate-y-8',
