--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,6 +9,7 @@ import CTA from '@/components/sections/shared/CTA.astro';
 // Components
 import ContactUsFormEmbed from '@/components/ui/forms/ContactUsFormEmbed.astro';
 import ListItem from '@/components/ui/ListItem.astro';
+import ScrollReveal from '@/components/sections/shared/ScrollReveal.astro';
 
 type Contact = {
 	name: string;
@@ -63,7 +64,12 @@ const contactInfo: Contact[] = [
 			}
 		</div>
 		<Fragment slot="after-content">
-			<ContactUsFormEmbed />
+			<ScrollReveal
+				stagger={true}
+				delay={250}
+			>
+				<ContactUsFormEmbed />
+			</ScrollReveal>
 		</Fragment>
 	</SubPageHero>
 </Layout>
