remove unused class

--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -22,10 +22,7 @@ import ScrollReveal from '@/components/sections/shared/ScrollReveal.astro';
 		class=""
 		layout="vertical"
 	>
-		<Fragment
-			slot="after-content"
-			class="w-full h-fit overflow-hidden"
-		>
+		<Fragment slot="after-content">
 			<ScrollReveal
 				stagger={true}
 				delay={250}
