--- a/src/components/sections/shared/Portfolio.astro
+++ b/src/components/sections/shared/Portfolio.astro
@@ -57,6 +57,7 @@ const {
 	backgroundColor="bg-gray-700"
 	headerColor="text-primary-500"
 	textColor="text-gray-200"
+	sectionId="portfolio"
 >
 	<div
 		class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
