--- a/src/components/sections/shared/ValueProposition.astro
+++ b/src/components/sections/shared/ValueProposition.astro
@@ -47,7 +47,9 @@ const {
 			animation="slideUp"
 			stagger={true}
 		>
-			<div class="star-divider flex text-primary-500 md:gap-2">
+			<div
+				class="star-divider flex justify-center items-center text-primary-500 md:gap-2"
+			>
 				<Star class="w-10 h-10 md:h-14 md:w-14" />
 				<Star class="w-10 h-10 md:h-14 md:w-14" />
 				<Star class="w-10 h-10 md:h-14 md:w-14" />
