--- a/src/components/ui/cards/BenefitCard.astro
+++ b/src/components/ui/cards/BenefitCard.astro
@@ -30,20 +30,22 @@ const animationOrder = reverse
 	<div class="content flex flex-col gap-10 w-full md:max-w-[45%]">
 		<ScrollReveal animation={animationOrder.left}>
 			<div class="flex flex-col gap-4">
-				<h3
-					class="text-primary-500 heading-l3"
-					set:html={title}
-				/>
-				<p
-					class="text-gray-200 wsl-text-sm"
-					set:html={description}
-				/>
+				<div class="flex flex-col gap-4">
+					<h3
+						class="text-primary-500 heading-l3"
+						set:html={title}
+					/>
+					<p
+						class="text-gray-200 wsl-text-sm"
+						set:html={description}
+					/>
+				</div>
+				<a
+					href="/schedule-call"
+					class="text-primary-500 font-bold"
+					>Schedule a Call</a
+				>
 			</div>
-			<a
-				href="/schedule-call"
-				class="text-primary-500 font-bold"
-				>Schedule a Call</a
-			>
 		</ScrollReveal>
 	</div>
 	<div class="image-container w-full md:max-w-[45%]">
