--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,9 +58,7 @@ const {
 			<slot />
 		</main>
 
-		<Footer
-			footerText="Committed to providing businesses with innovative solutions that attract more clients, serve them better & keep them longer."
-		/>
+		<Footer />
 		<slot name="scripts" />
 	</body>
 </html>
