--- a/src/components/ui/buttons/Button.astro
+++ b/src/components/ui/buttons/Button.astro
@@ -12,7 +12,7 @@ interface Props {
 const {
 	id,
 	text = 'Click',
-	href = '#',
+	href,
 	type = 'button',
 	variation = 'primary',
 	linkColor = 'text-gray-50',
