--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -30,7 +30,7 @@ const { title, description } = Astro.props;
 		<ClientRouter />
 	</head>
 	<body class="bg-gray-50 text-gray-800 font-sans">
-		<Header />
+		<Header class="" />
 		<main class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 py-8">
 			<MDXContent>
 				<slot />
