--- a/src/pages/ai-automation.astro
+++ b/src/pages/ai-automation.astro
@@ -6,14 +6,13 @@ import SubPageHero from '@/components/sections/shared/SubPageHero.astro';
 import ValueProposition from '@/components/sections/shared/ValueProposition.astro';
 import Benefits from '@/components/sections/shared/Benefits.astro';
 import ExtraServices from '@/components/sections/home/ExtraServices.astro';
-import Testimonials from '@/components/sections/shared/Testimonials.astro';
-import Portfolio from '@/components/sections/shared/Portfolio.astro';
 import CTA from '@/components/sections/shared/CTA.astro';
 import ButtonGroup from '@/components/groups/ButtonGroup.astro';
 
 // Images & Media
-import Star from '@/assets/icons/Star.astro';
-import TemporaryImage from '@/assets/tmp.avif';
+import Image1 from '@/assets/PremierRenovations.png';
+import Image2 from '@/assets/OakridgeRenovations.png';
+import Image3 from '@/assets/Elevate.png';
 ---
 
 <Layout
@@ -56,23 +55,23 @@ import TemporaryImage from '@/assets/tmp.avif';
 				title: 'Never Miss Another Lead',
 				description:
 					"When someone reaches out, time matters. Our AI chat and lead capture automations respond instantly — even after hours — so you're not losing work while you're on the job. <ol class='text-gray-200 wsl-text-sm font-semibold'>Key Benefits: <li>1. Instant replies to new inquiries</li> <li>2. Fewer missed opportunities</li><li> 3. Book jobs while you sleep</li></ol>",
-				image: TemporaryImage,
-				imageAlt: 'temporary',
+				image: Image1,
+				imageAlt: 'Never Miss Another Lead',
 			},
 			{
 				title: 'Get More Reviews Without Chasing Clients',
 				description:
 					'After you finish a job, the last thing on your list is asking for a review. We automate that process, sending smart, friendly follow-ups that get you more 5-star reviews on Google and boost your local visibility. <ol class="text-gray-200 wsl-text-sm font-semibold">Key Benefits: <li>1. Review requests go out automatically</li> <li>2. More social proof, higher ranking</li><li> 3. Strengthen your Google Business Profile</li></ol>',
-				image: TemporaryImage,
-				imageAlt: 'temporary',
+				image: Image2,
+				imageAlt: 'Get More Reviews Without Chasing Clients',
 				reverse: true,
 			},
 			{
-				title: 'Systems That Work While You’re Working',
+				title: "Systems That Work While You're Working",
 				description:
 					"Even when you're on-site or off the clock, your business keeps moving. We automate key touchpoints in your workflow — so leads stay warm, clients stay informed, and nothing gets forgotten. <ol class='text-gray-200 wsl-text-sm font-semibold'>Key Benefits: <li>1. Automatic follow-ups and task reminders</li> <li>2. Keep jobs on track without micromanaging</li><li> 3. Less time spent checking in or chasing down info</li></ol>",
-				image: TemporaryImage,
-				imageAlt: 'temporary',
+				image: Image3,
+				imageAlt: "Systems That Work While You're Working",
 			},
 		]}
 	/>
