--- a/src/pages/digital-marketing.astro
+++ b/src/pages/digital-marketing.astro
@@ -6,14 +6,13 @@ import SubPageHero from '@/components/sections/shared/SubPageHero.astro';
 import ValueProposition from '@/components/sections/shared/ValueProposition.astro';
 import Benefits from '@/components/sections/shared/Benefits.astro';
 import ExtraServices from '@/components/sections/home/ExtraServices.astro';
-import Testimonials from '@/components/sections/shared/Testimonials.astro';
-import Portfolio from '@/components/sections/shared/Portfolio.astro';
 import CTA from '@/components/sections/shared/CTA.astro';
 import ButtonGroup from '@/components/groups/ButtonGroup.astro';
 
 // Images & Media
-import Star from '@/assets/icons/Star.astro';
-import TemporaryImage from '@/assets/tmp.avif';
+import Image1 from '@/assets/PremierRenovations.png';
+import Image2 from '@/assets/OakridgeRenovations.png';
+import Image3 from '@/assets/Elevate.png';
 ---
 
 <Layout
@@ -56,23 +55,23 @@ import TemporaryImage from '@/assets/tmp.avif';
 				title: 'Draw In New Customers with Every 5-Star Review',
 				description:
 					'Word of mouth is great—but online reviews are the new handshake. We help you request reviews automatically, right when customers are happiest. With every new review, your business climbs higher in search results, earns more clicks, and closes more jobs.',
-				image: TemporaryImage,
-				imageAlt: 'temporary',
+				image: Image1,
+				imageAlt: 'Draw In New Customers with Every 5-Star Review',
 			},
 			{
 				title: 'Retargeting Ads',
 				description:
 					"People dont always book the first time they visit your site. Retargeting ads bring them back when they're ready to buy. <ol class='text-gray-200 wsl-text-sm font-semibold'>Key Benefits: <li>1. Bring back high-intent visitors</li> <li>2. Increase conversion rates from traffic you already paid for</li><li> 3. Stay top-of-mind without spamming</li></ol>",
-				image: TemporaryImage,
-				imageAlt: 'temporary',
+				image: Image2,
+				imageAlt: 'Retargeting Ads',
 				reverse: true,
 			},
 			{
 				title: 'Only Pay for Clicks That Turn Into Jobs',
 				description:
 					"We set up and manage targeted Google Ads that drive real leads, not just clicks. No bloated budgets, just calls from people ready to hire. <ol class='text-gray-200 wsl-text-sm font-semibold'>Key Benefits: <li>1. Higher quality leads from paid traffic</li> <li>2. Lower cost-per-click with better targeting</li><li> 3. More control over when and how jobs come in</li></ol>",
-				image: TemporaryImage,
-				imageAlt: 'temporary',
+				image: Image3,
+				imageAlt: 'Only Pay for Clicks That Turn Into Jobs',
 			},
 		]}
 	/>
