update head component

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,19 @@
 ---
-// View Transition
+// Layout.astro
 import { ClientRouter } from 'astro:transitions';
+import Head from '@/components/Head.astro';
+import Header from '@/components/ui/navigation/Header.astro';
+import Footer from '@/components/ui/navigation/Footer.astro';
 
 import '@/styles/custom-styles.css';
 import '@/styles/global.css';
 import '@/styles/fluid-typography.css';
 import '@/styles/fluid-layouts.css';
 
-// Layout.astro
-import Header from '@/components/ui/navigation/Header.astro';
-import Footer from '@/components/ui/navigation//Footer.astro';
-
 interface Props {
 	title?: string;
 	description?: string;
-	hasHero?: boolean; // Flag to indicate if page has hero section
+	hasHero?: boolean;
 }
 
 const {
@@ -26,61 +25,17 @@ const {
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			name="description"
-			content={description}
-		/>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<ClientRouter />
-		<title>{title}</title>
-
-		<!-- Favicons & App Icons -->
-		<link
-			rel="icon"
-			type="image/x-icon"
-			href="/favicon.ico"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="/favicon-16x16.png"
-		/>
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="/apple-touch-icon.png"
-		/>
-		<link
-			rel="manifest"
-			href="/site.webmanifest"
-		/>
-
-		<link
-			rel="stylesheet"
-			href="https://unpkg.com/aos@next/dist/aos.css"
-		/>
-	</head>
+	<Head
+		{title}
+		{description}
+	/>
 	<body class="font-sans antialiased">
-		<!-- Header with conditional styling for hero pages -->
-		<Header isOverlay={hasHero} />
+		<ClientRouter />
 
-		<!-- Main content -->
+		<Header isOverlay={hasHero} />
 		<main class={hasHero ? 'relative' : ''}>
 			<slot />
 		</main>
-
 		<Footer />
 		<slot name="scripts" />
 	</body>
